# godotcaml

./: CLAUDE.md  DEV.md  animated_sprite_2d.gd  animated_sprite_2d.gd.uid  animated_sprite_test.tscn  export_presets.cfg  hello.gdextension  hello.gdextension.uid  icon.svg.import  main.gd  main.gd.uid  main.tscn  node_2d.tscn  player_movement.gd  player_movement.gd.uid  project.godot  reference_scene.tscn  test_final.tscn  todo
dodge_the_creeps_2d_assets/: README.md
dodge_the_creeps_2d_assets/art/: House In a Forest Loop.ogg.import  enemyFlyingAlt_1.png.import  enemyFlyingAlt_2.png.import  enemySwimming_1.png.import  enemySwimming_2.png.import  enemyWalking_1.png.import  enemyWalking_2.png.import  gameover.wav.import  playerGrey_up1.png.import  playerGrey_up2.png.import  playerGrey_walk1.png.import  playerGrey_walk2.png.import
dodge_the_creeps_2d_assets/fonts/: Xolonium-Regular.ttf.import
ocaml/: dune
ocaml/godotcaml/: CLAUDE.md  api_types.ml  bootstrap.ml  dune-project  foreign_arrays.ml  foreign_methods.ml  godotcaml.opam  godotcaml_api.opam  godotcaml_base.opam  ppx_godot.opam
ocaml/godotcaml/apis/: api.ml  api_builtins.ml  api_classes_intf.ml  api_helpers.ml  api_types.ml  blarg.ml  bootstrap.ml  conv.ml  dune  foreign_api.ml  foreign_arrays.ml  foreign_base.ml  foreign_builtin_methods.ml  foreign_methods.ml  foreign_utility_functions.ml  gcallable.ml  gdextension_interface.h  gdforeign.ml  gen_api.ml  godotcaml.ml  gsignal.ml  hello-gdextension.c  my_ocaml_extension.ml  ppx_godot.ml  ppx_godot.ml_new  toplevel.ml  toy_api.ml  uses_ppx_godot.ml  uses_ppx_godot.ppx.ml  utop_loader.ml
ocaml/godotcaml/c/: hello-gdextension.c  hello-gdextension.os  hello.gdextension
ocaml/godotcaml/claude/: memory-leaks.md
ocaml/godotcaml/lib/: dune  godotcaml.ml  use_printo.c
ocaml/godotcaml/test/: dune
